<?xml version="1.0"?>
<package format="2">
  <name>filter_reflective_uavs</name>
  <version>0.0.0</version>
  <description>The filter_reflective_uavs package</description>

  <maintainer email="kamlem2002@gmail.com">Michal Kamler</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> mrs_lib</build_depend>
  <build_depend> mrs_msgs</build_depend>
  <build_depend> nav_msgs</build_depend>
  <build_depend> nodelet</build_depend>
  <build_depend> ouster_ros</build_depend>
  <build_depend> pcl_conversions</build_depend>
  <build_depend> pcl_ros</build_depend>
  <build_depend> roscpp</build_depend>
  <build_depend> tf2</build_depend>
  <build_depend> tf2_ros</build_depend>
  <build_export_depend> mrs_lib</build_export_depend>
  <build_export_depend> mrs_msgs</build_export_depend>
  <build_export_depend> nav_msgs</build_export_depend>
  <build_export_depend> nodelet</build_export_depend>
  <build_export_depend> ouster_ros</build_export_depend>
  <build_export_depend> pcl_conversions</build_export_depend>
  <build_export_depend> pcl_ros</build_export_depend>
  <build_export_depend> roscpp</build_export_depend>
  <build_export_depend> tf2</build_export_depend>
  <build_export_depend> tf2_ros</build_export_depend>
  <exec_depend> mrs_lib</exec_depend>
  <exec_depend> mrs_msgs</exec_depend>
  <exec_depend> nav_msgs</exec_depend>
  <exec_depend> nodelet</exec_depend>
  <exec_depend> ouster_ros</exec_depend>
  <exec_depend> pcl_conversions</exec_depend>
  <exec_depend> pcl_ros</exec_depend>
  <exec_depend> roscpp</exec_depend>
  <exec_depend> tf2</exec_depend>
  <exec_depend> tf2_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>
</package>
